# IOT-EDGE-

./: README.md
agent/: Cargo.toml
agent/src/: main.rs  ota_client.rs  watchdog.rs
ota/applier/: Cargo.toml
ota/applier/src/: main.rs
scripts/: build-agent-aarch64.sh  build-applier-aarch64.sh
systemd/: iot-gateway-agent.service  ota-applier.service
